完善基本结构

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MyZhihuDemo</string>
+
+    <string name="nav_news">新闻</string>
+    <string name="nav_photos">图片</string>
+    <string name="nav_videos">视频</string>
+    <string name="nav_setting">设置</string>
+
 </resources>
