--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="home_show">首页特别展示</string>
     <string name="title_activity_open_lisence">开源许可</string>
 
+    <string name="video_download_manager">下载管理</string>
+    <string name="collection">收藏</string>
+    <string name="server_error">无法连接到服务器,请检查你的网络或稍后重试</string>
 </resources>
